k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: devops-portfolio
  ports:
    - port: 80
      targetPort: 3000
